# podcasting

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agents/: podcast_agent.py
config/: credentials.yaml  logging.conf  pipeline_config.yaml  prompts_config.yaml  settings.yaml  voices.yaml
prompts/: README.md  base_templates.py
prompts/style_variants/: casual_tone.txt  minimal_tone.txt  scientific_tone.txt
prompts/two_person_interview_templates.py/: dialogue_prompt.txt  enhance_prompt.txt  introduction_prompt.txt  plan_prompt.txt
prompts/validations/: coherence_check_prompt.txt  fact_check_prompt.txt
sample_outputs/: README.md
scripts/: README.md  enhance_script.py  generate_audio.py  generate_dialogue.py  generate_plan.py  merge_audio.py  parse_pdf.py  run_pipeline.py  validate_script.py
tools/: audio_tools.py  pdf_tools.py  script_tools.py  validation_tools.py
utils/: README.md  audio_processing.py  config_loader.py  file_manager.py  llm_client.py  logging_utils.py  prompt_loader.py  text_processing.py  tts_client.py
